--- a/print.html
+++ b/print.html
@@ -2457,6 +2457,52 @@ impl TwoSat {
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="manacher"><a class="header" href="#manacher">Manacher</a></h1>
 <p>For an array \(A\) of length \(n\), <code>manacher(A)</code> returns a vector \(M\) where, for every \(i \in \left[0, n\right)\), \(A_{i-j} = A_{i+j}\) holds for every \(j \in \left[0, M_i \right)\).</p>
+<p>Additional modification should be added by a user to use this function for finding every palindromes among subsequences of a string.</p>
+<h2 id="example-9"><a class="header" href="#example-9">Example</a></h2>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
+</span>let s = &quot;abracadacabra&quot;.as_bytes();
+let man = manacher(s);
+println!(&quot;{:?}&quot;, man); // [1, 1, 1, 1, 2, 1, 4, 1, 2, 1, 1, 1, 1]
+
+for i in 0..s.len() {
+    println!(
+        &quot;{}&quot;,
+        std::str::from_utf8(&amp;s[i + 1 - man[i]..i + man[i]]).unwrap()
+    );
+}
+<span class="boring">}
+</span><span class="boring">
+</span><span class="boring">fn manacher&lt;T: Eq&gt;(arr: &amp;[T]) -&gt; Vec&lt;usize&gt; {
+</span><span class="boring">    let n = arr.len();
+</span><span class="boring">    let mut mana: Vec&lt;usize&gt; = vec![1; n];
+</span><span class="boring">    let mut r: usize = 1;
+</span><span class="boring">    let mut p: usize = 0;
+</span><span class="boring">
+</span><span class="boring">    for i in 1..arr.len() {
+</span><span class="boring">        if i + 1 &gt;= r {
+</span><span class="boring">            mana[i] = 1;
+</span><span class="boring">        } else {
+</span><span class="boring">            let j = 2 * p - i;
+</span><span class="boring">            mana[i] = mana[j].min(r - i);
+</span><span class="boring">        }
+</span><span class="boring">
+</span><span class="boring">        while mana[i] &lt;= i &amp;&amp; i + mana[i] &lt; n {
+</span><span class="boring">            if arr[(i - mana[i])] != arr[(i + mana[i])] {
+</span><span class="boring">                break;
+</span><span class="boring">            }
+</span><span class="boring">            mana[i] += 1;
+</span><span class="boring">        }
+</span><span class="boring">
+</span><span class="boring">        if r &lt; mana[i] + i {
+</span><span class="boring">            r = mana[i] + i;
+</span><span class="boring">            p = i;
+</span><span class="boring">        }
+</span><span class="boring">    }
+</span><span class="boring">
+</span><span class="boring">    mana
+</span><span class="boring">}
+</span></code></pre></pre>
+<h2 id="code-7"><a class="header" href="#code-7">Code</a></h2>
 <pre><code class="language-rust noplayground">fn manacher&lt;T: Eq&gt;(arr: &amp;[T]) -&gt; Vec&lt;u32&gt; {
     let n = arr.len() as u32;
     let mut mana: Vec&lt;u32&gt; = vec![1; n as usize];
@@ -2488,123 +2534,22 @@ impl TwoSat {
 }
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="suffix-array-and-lcp-array"><a class="header" href="#suffix-array-and-lcp-array">Suffix Array and LCP Array</a></h1>
-<p>For an array \(A\) of length \(n\), <code>suffix_and_lcp(A)</code> returns two vectors \(SA\) and \(LCP\) where,</p>
+<p>For an array \(A\) of length \(n\), <code>sa_lcp(A)</code> returns two vectors \(SA\) and \(LCP\) where,</p>
 <ul>
 <li>\(A[SA[i] \dots]\) is the \(i\)-th suffix in lexicographical order for every \(i \in \left[0, n\right)\)</li>
 </ul>
 <p>and</p>
 <ul>
-<li>\(LCP[i]\) is the length of the longest common prefix between \(A[SA[i-1] \dots]\) and \(A[SA[i] \dots]\) for every \(i \in \left[1, n \right)\).</li>
+<li>\(LCP[i]\) is the length of the longest common prefix between \(A[SA[i-1] \dots]\) and \(A[SA[i] \dots]\) for every \(i \in \left[1, n \right)\). Also, \(LCP[0] = 0\).</li>
 </ul>
-<p>Each vectors are called &quot;suffix array&quot; and &quot;LCP array&quot; of \(A\) respectively. For example, if <code>A = [0, 1, 2, 1, 2, 0, 1, 2]</code>, in other words <code>A = &quot;asdsdasd&quot;</code>, then <code>SA = [5, 0, 7, 4, 2, 6, 3, 1]</code> and <code>LCP = [*, 3, 0, 1, 1, 0, 2, 2]</code>.</p>
-<p>For finding SA, Manber-Myers algorithm combined with counting sort is used, hence the time complexity is \(O(n\log{n})\). For LCP array, Kasai's algorithm is used, hence the time complexity is \(O(n)\).</p>
-<pre><code class="language-rust noplayground">// Suffix array and LCP array
-// Reference: http://www.secmem.org/blog/2021/07/18/suffix-array-and-lcp/
-
-fn suffix_array&lt;T: Ord + std::hash::Hash&gt;(s: &amp;[T]) -&gt; Vec&lt;usize&gt; {
-    use std::collections::*;
-
-    if s.len() == 0 {
-        return vec![];
-    } else if s.len() == 1 {
-        return vec![0];
-    }
-
-    let n = s.len();
-
-    let mut r: Vec&lt;usize&gt; = vec![0; n * 2];
-    let map: BTreeMap&lt;_, _&gt; = {
-        let mut sorted: Vec&lt;_&gt; = s.iter().collect();
-        sorted.sort_unstable();
-        sorted
-            .into_iter()
-            .enumerate()
-            .map(|x| (x.1, x.0 + 1))
-            .collect()
-    };
-    for i in 0..n {
-        r[i] = *map.get(&amp;s[i]).unwrap();
-    }
-
-    let m = n.max(map.len()) + 1;
-    let mut sa: Vec&lt;usize&gt; = (0..n).collect();
-    let mut nr: Vec&lt;usize&gt; = vec![0; n * 2];
-    let mut cnt: Vec&lt;usize&gt; = vec![0; m];
-    let mut idx: Vec&lt;usize&gt; = vec![0; n];
-
-    for d in (0..).map(|x| 1 &lt;&lt; x).take_while(|&amp;d| d &lt; n) {
-        macro_rules! key {
-            ($i:expr) =&gt; {
-                if $i + d &gt;= n {
-                    (r[$i], 0)
-                } else {
-                    (r[$i], r[$i + d])
-                }
-            };
-        }
-
-        (0..m).for_each(|i| cnt[i] = 0);
-        (0..n).for_each(|i| cnt[r[i + d]] += 1);
-        (1..m).for_each(|i| cnt[i] += cnt[i - 1]);
-        for i in (0..n).rev() {
-            cnt[r[i + d]] -= 1;
-            idx[cnt[r[i + d]]] = i;
-        }
-
-        (0..m).for_each(|i| cnt[i] = 0);
-        (0..n).for_each(|i| cnt[r[i]] += 1);
-        (1..m).for_each(|i| cnt[i] += cnt[i - 1]);
-        for i in (0..n).rev() {
-            cnt[r[idx[i]]] -= 1;
-            sa[cnt[r[idx[i]]]] = idx[i];
-        }
-
-        nr[sa[0]] = 1;
-        for i in 1..n {
-            nr[sa[i]] = nr[sa[i - 1]] + if key!(sa[i - 1]) &lt; key!(sa[i]) { 1 } else { 0 };
-        }
-        std::mem::swap(&amp;mut r, &amp;mut nr);
-
-        if r[sa[n - 1]] == n {
-            break;
-        }
-    }
-
-    sa
-}
-
-fn suffix_and_lcp&lt;T: Ord + std::hash::Hash&gt;(arr: &amp;[T]) -&gt; (Vec&lt;usize&gt;, Vec&lt;usize&gt;) {
-    let n = arr.len();
-    let sa = suffix_array(arr);
-    let mut lcp: Vec&lt;usize&gt; = vec![0; n];
-    let mut isa: Vec&lt;usize&gt; = vec![0; n];
-    for i in 0..n {
-        isa[sa[i]] = i;
-    }
-    let mut k = 0;
-    for i in 0..n {
-        if isa[i] != 0 {
-            let j = sa[isa[i] - 1];
-            while i + k &lt; n &amp;&amp; j + k &lt; n &amp;&amp; arr[i + k] == arr[j + k] {
-                k += 1;
-            }
-            lcp[isa[i]] = if k != 0 {
-                k -= 1;
-                k + 1
-            } else {
-                0
-            };
-        }
-    }
-    (sa, lcp)
-}
-</code></pre>
-<h2 id="example-9"><a class="header" href="#example-9">Example</a></h2>
+<p>\(SA\) and \(LCP\) are called &quot;suffix array&quot; and &quot;LCP array&quot; of \(A\) respectively.</p>
+<p>For finding SA, Manber-Myers algorithm combined with counting sort is used, hence the time complexity is \(O(n\log{n})\). For LCP array, Kasai's algorithm is used, hence the time complexity is \(O(n)\). The total time complexity is \(O(n\log{n})\).</p>
+<h2 id="example-10"><a class="header" href="#example-10">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>let s = &quot;asdsdasd&quot;;
-let (sa, lcp) = suffix_and_lcp(s.as_bytes());
-println!(&quot;{:?}&quot;, sa);
-println!(&quot;{:?}&quot;, lcp);
+let (sa, lcp) = sa_lcp(s.as_bytes());
+println!(&quot;{:?}&quot;, sa);  // [5, 0, 7, 4, 2, 6, 3, 1]
+println!(&quot;{:?}&quot;, lcp); // [x, 3, 0, 1, 1, 0, 2, 2]
 <span class="boring">}
 </span><span class="boring">
 </span><span class="boring">// Suffix array and LCP array
@@ -2682,7 +2627,7 @@ println!(&quot;{:?}&quot;, lcp);
 </span><span class="boring">    sa
 </span><span class="boring">}
 </span><span class="boring">
-</span><span class="boring">fn suffix_and_lcp&lt;T: Ord&gt;(arr: &amp;[T]) -&gt; (Vec&lt;usize&gt;, Vec&lt;usize&gt;) {
+</span><span class="boring">fn sa_lcp&lt;T: Ord&gt;(arr: &amp;[T]) -&gt; (Vec&lt;usize&gt;, Vec&lt;usize&gt;) {
 </span><span class="boring">    let n = arr.len();
 </span><span class="boring">    let sa = suffix_array(arr);
 </span><span class="boring">    let mut lcp: Vec&lt;usize&gt; = vec![0; n];
@@ -2708,6 +2653,108 @@ println!(&quot;{:?}&quot;, lcp);
 </span><span class="boring">    (sa, lcp)
 </span><span class="boring">}
 </span></code></pre></pre>
+<h2 id="code-8"><a class="header" href="#code-8">Code</a></h2>
+<pre><code class="language-rust noplayground">// Suffix array and LCP array
+// Reference: http://www.secmem.org/blog/2021/07/18/suffix-array-and-lcp/
+
+fn suffix_array&lt;T: Ord + std::hash::Hash&gt;(s: &amp;[T]) -&gt; Vec&lt;usize&gt; {
+    use std::collections::*;
+
+    if s.len() == 0 {
+        return vec![];
+    } else if s.len() == 1 {
+        return vec![0];
+    }
+
+    let n = s.len();
+
+    let mut r: Vec&lt;usize&gt; = vec![0; n * 2];
+    let map: BTreeMap&lt;_, _&gt; = {
+        let mut sorted: Vec&lt;_&gt; = s.iter().collect();
+        sorted.sort_unstable();
+        sorted
+            .into_iter()
+            .enumerate()
+            .map(|x| (x.1, x.0 + 1))
+            .collect()
+    };
+    for i in 0..n {
+        r[i] = *map.get(&amp;s[i]).unwrap();
+    }
+
+    let m = n.max(map.len()) + 1;
+    let mut sa: Vec&lt;usize&gt; = (0..n).collect();
+    let mut nr: Vec&lt;usize&gt; = vec![0; n * 2];
+    let mut cnt: Vec&lt;usize&gt; = vec![0; m];
+    let mut idx: Vec&lt;usize&gt; = vec![0; n];
+
+    for d in (0..).map(|x| 1 &lt;&lt; x).take_while(|&amp;d| d &lt; n) {
+        macro_rules! key {
+            ($i:expr) =&gt; {
+                if $i + d &gt;= n {
+                    (r[$i], 0)
+                } else {
+                    (r[$i], r[$i + d])
+                }
+            };
+        }
+
+        (0..m).for_each(|i| cnt[i] = 0);
+        (0..n).for_each(|i| cnt[r[i + d]] += 1);
+        (1..m).for_each(|i| cnt[i] += cnt[i - 1]);
+        for i in (0..n).rev() {
+            cnt[r[i + d]] -= 1;
+            idx[cnt[r[i + d]]] = i;
+        }
+
+        (0..m).for_each(|i| cnt[i] = 0);
+        (0..n).for_each(|i| cnt[r[i]] += 1);
+        (1..m).for_each(|i| cnt[i] += cnt[i - 1]);
+        for i in (0..n).rev() {
+            cnt[r[idx[i]]] -= 1;
+            sa[cnt[r[idx[i]]]] = idx[i];
+        }
+
+        nr[sa[0]] = 1;
+        for i in 1..n {
+            nr[sa[i]] = nr[sa[i - 1]] + if key!(sa[i - 1]) &lt; key!(sa[i]) { 1 } else { 0 };
+        }
+        std::mem::swap(&amp;mut r, &amp;mut nr);
+
+        if r[sa[n - 1]] == n {
+            break;
+        }
+    }
+
+    sa
+}
+
+fn sa_lcp&lt;T: Ord + std::hash::Hash&gt;(arr: &amp;[T]) -&gt; (Vec&lt;usize&gt;, Vec&lt;usize&gt;) {
+    let n = arr.len();
+    let sa = suffix_array(arr);
+    let mut lcp: Vec&lt;usize&gt; = vec![0; n];
+    let mut isa: Vec&lt;usize&gt; = vec![0; n];
+    for i in 0..n {
+        isa[sa[i]] = i;
+    }
+    let mut k = 0;
+    for i in 0..n {
+        if isa[i] != 0 {
+            let j = sa[isa[i] - 1];
+            while i + k &lt; n &amp;&amp; j + k &lt; n &amp;&amp; arr[i + k] == arr[j + k] {
+                k += 1;
+            }
+            lcp[isa[i]] = if k != 0 {
+                k -= 1;
+                k + 1
+            } else {
+                0
+            };
+        }
+    }
+    (sa, lcp)
+}
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="convex-hull"><a class="header" href="#convex-hull">Convex Hull</a></h1>
 <h2 id="graham-scan"><a class="header" href="#graham-scan">Graham Scan</a></h2>
 <p>This snippet excludes every points on vertices from the convex hull, and only includes points of both ends.</p>
