--- a/print.html
+++ b/print.html
@@ -2456,10 +2456,160 @@ impl TwoSat {
 }
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="kmp"><a class="header" href="#kmp">KMP</a></h1>
+<p>Given an array \(P\), <code>KMPNeedle::new(P)</code> returns a <code>KMPNeedle</code> instance for searching \(P\) in any array, using <code>KMPMatcher</code>.</p>
+<p>Given a <code>KMPNeedle</code> instance <code>p</code> and an array target \(T\), <code>KMPMatcher::new(&amp;p, T)</code> returns an iterator yielding indicies where \(P\) appears within \(T\). Even if some ranges where \(P\) exists within \(T\) overlap with each other, they are still all yielded as shown in the second string from the example <code>&quot;ABCDABCDABCD&quot;</code>.</p>
+<p><code>KMPNeedle::new(P)</code> runs in a time complexity of \(O(\left| P \right|)\) and <code>KMPMatcher::new(T)</code> takes a time complexity of \(O(\left| T \right|)\) to be consumed. <code>KMPMatcher</code> searches for a pattern lazily, so it only takes time of total searched length in \(T\).</p>
+<p>A single <code>KMPNeedle</code> instance can be used to search \(P\) in multiple arrays as shown in the example.</p>
+<h2 id="example-9"><a class="header" href="#example-9">Example</a></h2>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
+</span>let pattern = &quot;ABCDABC&quot;;
+let targets = vec![&quot;ABDABCDABCE&quot;, &quot;ABCDABCDABCD&quot;, &quot;ABBCCABCDABDABCDABC&quot;];
+
+let needle = KMPNeedle::new(pattern.as_bytes());
+for &amp;t in targets.iter() {
+    let kmp = KMPMatcher::new(&amp;needle, t.as_bytes());
+    for v in kmp {
+        print!(&quot;{} &quot;, v);
+    }
+    println!();
+}
+<span class="boring">}
+</span><span class="boring">
+</span><span class="boring">struct KMPNeedle&lt;'a, T: PartialEq&gt; {
+</span><span class="boring">    p: &amp;'a [T],
+</span><span class="boring">    c: Vec&lt;usize&gt;,
+</span><span class="boring">}
+</span><span class="boring">
+</span><span class="boring">impl&lt;'a, T: PartialEq&gt; KMPNeedle&lt;'a, T&gt; {
+</span><span class="boring">    fn new(p: &amp;'a [T]) -&gt; Self {
+</span><span class="boring">        let mut c: Vec&lt;usize&gt; = vec![0; p.len() + 1];
+</span><span class="boring">
+</span><span class="boring">        let mut l = 0;
+</span><span class="boring">        for (r, v) in p.iter().enumerate().skip(1) {
+</span><span class="boring">            while l &gt; 0 &amp;&amp; p[l] != *v {
+</span><span class="boring">                l = c[l];
+</span><span class="boring">            }
+</span><span class="boring">            if p[l] == *v {
+</span><span class="boring">                c[r + 1] = l + 1;
+</span><span class="boring">                l += 1;
+</span><span class="boring">            }
+</span><span class="boring">        }
+</span><span class="boring">
+</span><span class="boring">        Self { p, c }
+</span><span class="boring">    }
+</span><span class="boring">}
+</span><span class="boring">
+</span><span class="boring">struct KMPMatcher&lt;'a, 'b: 'a, 'c: 'b, T: PartialEq&gt; {
+</span><span class="boring">    needle: &amp;'c KMPNeedle&lt;'b, T&gt;,
+</span><span class="boring">    t: &amp;'a [T],
+</span><span class="boring">    i: usize,
+</span><span class="boring">    j: usize,
+</span><span class="boring">}
+</span><span class="boring">
+</span><span class="boring">impl&lt;'a, 'b: 'a, 'c: 'b, T: PartialEq&gt; KMPMatcher&lt;'a, 'b, 'c, T&gt; {
+</span><span class="boring">    fn new(needle: &amp;'c KMPNeedle&lt;'b, T&gt;, t: &amp;'a [T]) -&gt; Self {
+</span><span class="boring">        Self {
+</span><span class="boring">            needle,
+</span><span class="boring">            t,
+</span><span class="boring">            i: 0,
+</span><span class="boring">            j: 0,
+</span><span class="boring">        }
+</span><span class="boring">    }
+</span><span class="boring">}
+</span><span class="boring">
+</span><span class="boring">impl&lt;'a, 'b: 'a, 'c: 'b, T: PartialEq&gt; Iterator for KMPMatcher&lt;'a, 'b, 'c, T&gt; {
+</span><span class="boring">    type Item = usize;
+</span><span class="boring">
+</span><span class="boring">    fn next(&amp;mut self) -&gt; Option&lt;Self::Item&gt; {
+</span><span class="boring">        while self.i &lt; self.t.len() {
+</span><span class="boring">            while self.j &gt; 0 &amp;&amp; self.t[self.i] != self.needle.p[self.j] {
+</span><span class="boring">                self.j = self.needle.c[self.j];
+</span><span class="boring">            }
+</span><span class="boring">            if self.t[self.i] == self.needle.p[self.j] {
+</span><span class="boring">                if self.j == self.needle.p.len() - 1 {
+</span><span class="boring">                    self.j = self.needle.c[self.j + 1];
+</span><span class="boring">                    self.i += 1;
+</span><span class="boring">                    return Some(self.i - self.needle.p.len());
+</span><span class="boring">                } else {
+</span><span class="boring">                    self.j += 1;
+</span><span class="boring">                }
+</span><span class="boring">            }
+</span><span class="boring">            self.i += 1;
+</span><span class="boring">        }
+</span><span class="boring">        None
+</span><span class="boring">    }
+</span><span class="boring">}
+</span></code></pre></pre>
+<h2 id="code-7"><a class="header" href="#code-7">Code</a></h2>
+<pre><code class="language-rust noplayground">struct KMPNeedle&lt;'a, T: PartialEq&gt; {
+    p: &amp;'a [T],
+    c: Vec&lt;usize&gt;,
+}
+
+impl&lt;'a, T: PartialEq&gt; KMPNeedle&lt;'a, T&gt; {
+    fn new(p: &amp;'a [T]) -&gt; Self {
+        let mut c: Vec&lt;usize&gt; = vec![0; p.len() + 1];
+
+        let mut l = 0;
+        for (r, v) in p.iter().enumerate().skip(1) {
+            while l &gt; 0 &amp;&amp; p[l] != *v {
+                l = c[l];
+            }
+            if p[l] == *v {
+                c[r + 1] = l + 1;
+                l += 1;
+            }
+        }
+
+        Self { p, c }
+    }
+}
+
+struct KMPMatcher&lt;'a, 'b: 'a, 'c: 'b, T: PartialEq&gt; {
+    needle: &amp;'c KMPNeedle&lt;'b, T&gt;,
+    t: &amp;'a [T],
+    i: usize,
+    j: usize,
+}
+
+impl&lt;'a, 'b: 'a, 'c: 'b, T: PartialEq&gt; KMPMatcher&lt;'a, 'b, 'c, T&gt; {
+    fn new(needle: &amp;'c KMPNeedle&lt;'b, T&gt;, t: &amp;'a [T]) -&gt; Self {
+        Self {
+            needle,
+            t,
+            i: 0,
+            j: 0,
+        }
+    }
+}
+
+impl&lt;'a, 'b: 'a, 'c: 'b, T: PartialEq&gt; Iterator for KMPMatcher&lt;'a, 'b, 'c, T&gt; {
+    type Item = usize;
+
+    fn next(&amp;mut self) -&gt; Option&lt;Self::Item&gt; {
+        while self.i &lt; self.t.len() {
+            while self.j &gt; 0 &amp;&amp; self.t[self.i] != self.needle.p[self.j] {
+                self.j = self.needle.c[self.j];
+            }
+            if self.t[self.i] == self.needle.p[self.j] {
+                if self.j == self.needle.p.len() - 1 {
+                    self.j = self.needle.c[self.j + 1];
+                    self.i += 1;
+                    return Some(self.i - self.needle.p.len());
+                } else {
+                    self.j += 1;
+                }
+            }
+            self.i += 1;
+        }
+        None
+    }
+}
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="manacher"><a class="header" href="#manacher">Manacher</a></h1>
 <p>For an array \(A\) of length \(n\), <code>manacher(A)</code> returns a vector \(M\) where, for every \(i \in \left[0, n\right)\), \(A_{i-j} = A_{i+j}\) holds for every \(j \in \left[0, M_i \right)\).</p>
 <p>Additional modification should be added by a user to use this function for finding every palindromes among subsequences of a string.</p>
-<h2 id="example-9"><a class="header" href="#example-9">Example</a></h2>
+<h2 id="example-10"><a class="header" href="#example-10">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>let s = &quot;abracadacabra&quot;.as_bytes();
 let man = manacher(s);
@@ -2503,7 +2653,7 @@ for i in 0..s.len() {
 </span><span class="boring">    mana
 </span><span class="boring">}
 </span></code></pre></pre>
-<h2 id="code-7"><a class="header" href="#code-7">Code</a></h2>
+<h2 id="code-8"><a class="header" href="#code-8">Code</a></h2>
 <pre><code class="language-rust noplayground">fn manacher&lt;T: Eq&gt;(arr: &amp;[T]) -&gt; Vec&lt;u32&gt; {
     let n = arr.len() as u32;
     let mut mana: Vec&lt;u32&gt; = vec![1; n as usize];
@@ -2545,7 +2695,7 @@ for i in 0..s.len() {
 </ul>
 <p>\(SA\) and \(LCP\) are called &quot;suffix array&quot; and &quot;LCP array&quot; of \(A\) respectively.</p>
 <p>For finding SA, Manber-Myers algorithm combined with counting sort is used, hence the time complexity is \(O(n\log{n})\). For LCP array, Kasai's algorithm is used, hence the time complexity is \(O(n)\). The total time complexity is \(O(n\log{n})\).</p>
-<h2 id="example-10"><a class="header" href="#example-10">Example</a></h2>
+<h2 id="example-11"><a class="header" href="#example-11">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>let s = &quot;asdsdasd&quot;;
 let (sa, lcp) = sa_lcp(s.as_bytes());
@@ -2654,7 +2804,7 @@ println!(&quot;{:?}&quot;, lcp); // [x, 3, 0, 1, 1, 0, 2, 2]
 </span><span class="boring">    (sa, lcp)
 </span><span class="boring">}
 </span></code></pre></pre>
-<h2 id="code-8"><a class="header" href="#code-8">Code</a></h2>
+<h2 id="code-9"><a class="header" href="#code-9">Code</a></h2>
 <pre><code class="language-rust noplayground">// Suffix array and LCP array
 // Reference: http://www.secmem.org/blog/2021/07/18/suffix-array-and-lcp/
 
